--- a/src/main/resources/templates/HR/leaves.html
+++ b/src/main/resources/templates/HR/leaves.html
@@ -242,7 +242,7 @@
 <td>${leave.startDate}</td>
                     <td>${leave.endDate}</td>
 
-                    <td>${leave.reason}</td>   <td><button style=" width:90px; border:none;border-radius:6px;color:steelblue;padding: 10px;background:whitesmoke;margin-right: 10px">Approve</button>
+                    <td>${leave.reason}</td>   <td><button style=" width:90px; border:none;border-radius:6px;color:steelblue;padding: 10px;background:whitesmoke;margin-right: 10px" onclick="approveRequest('${leave.uniqueId}')">Approve</button>
                     <button style="width:90px; border:none;border-radius:6px;color:white;padding: 10px;background:gray">Reject</button></td>
 
                 </tr>
